--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -646,7 +646,7 @@ header {
 .automap {
     margin: 20px auto;
     width: 80%;
-    height: 500px;
+    aspect-ratio: 2/1;
 }
 
 /********** Range Input Styles **********/
@@ -691,3 +691,38 @@ input[type="range"] {
    outline-offset: 0.125rem; 
  }
  
+
+#popup-display {
+    padding: 5px 15px;
+
+    position: fixed;
+    top: 10px;
+    left: 50%;
+    transform: translateX(-50%);
+
+    background: rgba(255,255,255, 0.8);
+    border-radius: 20px;
+
+    display: flex;
+    align-items: center;
+    gap: 10px;
+
+    font-size: 14px;
+    display: none;
+}
+
+.alert-popup {
+    color: 	#FFA500;
+}
+
+.info-popup {
+    color: 	#00BFFF;
+}
+
+.error-popup {
+    color: 	#FF0000;
+}
+
+.confirm-popup {
+    color: #32CD32;
+}
