--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -105,6 +105,10 @@ header {
         outline: 2px solid rgba(146, 144, 195, 0.6);
         outline-offset: 3px;
     }
+
+    &::placeholder {
+        color: rgba(255, 255, 2550, 0.3);
+    }
 }
 
 
@@ -396,7 +400,7 @@ header {
         justify-content: center;
         gap: 10px;
         list-style-type: none;
-        padding: 15px;
+        padding: 15px 0px 15px 10px;
         li {
             display: flex;
             flex-direction: column;
@@ -411,10 +415,41 @@ header {
                 cursor: pointer;
                 opacity: 0.9;
             }
+
+            p {
+                font-weight: 700;
+                font-size: 20px;
+                letter-spacing: 0.2px;
+                .max-temperature {
+                    color: #01e97d;
+                    font-size: 28px;
+                    font-weight: 400;
+                }
+                
+                .min-temperature {
+                 color: rgb(89, 165, 227);
+                 font-size: 20px;
+                 font-weight: 400;
+                }
+            }
+
+            .rain {
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                font-size: 16px;
+                font-weight: 400;
+
+                span {
+                    transform: scale(0.8);
+                }
+            }
         }
 
     }
 }
+
+
 
 /* MAPS */
 
@@ -757,11 +792,11 @@ input[type="range"] {
 
 .checkbox-wrapper-2 {
   .temperature-label {
-    color: #ff4500;
+    color: #01e97d;
   }
 
   .temperature-label input:checked {
-    background-color: #ff4500;
+    background-color: #01e97d;
   }
 
   .rainfall-label {
@@ -780,3 +815,9 @@ input[type="range"] {
     background-color: #D0AF00;
   }
 }
+
+.graph-options {
+    padding: 10px;
+    background: rgba(126, 124, 168, 0.6);
+}
+
