--- a/src/styles/automap.css
+++ b/src/styles/automap.css
@@ -38,3 +38,32 @@
     width: 55px;
     border-radius: 25px 25px 25px 25px;
   }
+
+  .startAndEndPoints {
+    color: rgba(255,0,0,1);
+  }
+
+  .mainRoadLine {
+    width: 5px;
+    color: rgb(60, 140, 202);
+  }
+
+  .timeTravelInfo {
+    background: rgba(60,140,202,1);
+    color: rgba(255,255,255,1);
+    font-weight: bold;
+    padding: 6px;
+    border-radius: 0px 20px 20px 20px;
+    
+    position: absolute;
+    left: 100px;
+    top: 35px;
+    p {
+      width: 100%;
+      text-align: center;
+      &:first-child {
+        text-transform: uppercase;
+        font-size: 14px;
+      }
+    }
+  }
